--- a/etc/my.cnf
+++ b/etc/my.cnf
@@ -28,8 +28,8 @@ max_connect_errors = 10000
 ## cache size
 table_open_cache = 2000
 thread_cache_size = 100
-#query_cache_type = 0
-#query_cache_size = 0
+query_cache_type = 1
+query_cache_size = 10M
 binlog_cache_size = 16M
 max_heap_table_size = 64M
 tmp_table_size = 64M
