--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -60,11 +60,13 @@ http {
     #proxy_temp_path  /var/tmp/nginx;
     #proxy_cache_key  "$scheme://$host$request_uri";
 
-    #init_by_lua 'cjson = require "cjson"';
-
     upstream backend {
         server 127.0.0.1:5000;
         keepalive  10;
+    }
+
+    upstream center {
+        server 10.11.9.101:5000;
     }
 
     server {
@@ -76,11 +78,29 @@ http {
             expires 1d;
         }
 
+        location = / {
+            root /home/isucon/webapp/public;
+            expires 1d;
+        }
+
         location / {
+            if ($request_method != GET) {
+                return 302;
+            }
+            error_page 302 @center;
+
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             proxy_set_header Host $host;
+            proxy_set_header is_decoy "true"
             proxy_pass http://backend;
+        }
+
+        location @center {
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_pass http://center;
         }
     }
 }
