--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -24,14 +24,15 @@ http {
 
     log_format ltsv 'time:$time_local\t'
                     'host:$remote_addr\t'
-                    "reqtime:$request_time\t"
-                    "apptime:$upstream_response_time\t"
-                    'api_key:$http_x_api_key\t'
-                    'req:$request\t'
                     'status:$status\t'
+                    'req:$request\t'
+                    'upstream:$upstream_addr\t'
+                    'reqtime:$request_time\t'
+                    'apptime:$upstream_response_time\t'
                     'size:$body_bytes_sent\t'
                     'referer:$http_referer\t'
-                    'ua:$http_user_agent'
+                    'ua:$http_user_agent\t'
+                    'api_key:$http_x_api_key'
     ;
 
     access_log  logs/access.log  ltsv;
@@ -61,12 +62,13 @@ http {
     #proxy_cache_key  "$scheme://$host$request_uri";
 
     upstream backend {
+        #server 125.6.152.101:80;
         server 127.0.0.1:5000;
         keepalive  10;
     }
 
     upstream center {
-        server 10.11.9.101:5000;
+        server 10.11.9.101:80;
     }
 
     server {
@@ -78,21 +80,18 @@ http {
             expires 1d;
         }
 
-        location = / {
-            root /home/isucon/webapp/public;
-            expires 1d;
-        }
-
         location / {
             if ($request_method != GET) {
                 return 302;
             }
-            error_page 302 @center;
+            error_page 302 =200 @center;
 
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             proxy_set_header Host $host;
-            proxy_set_header is_decoy "true"
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-For $http_x_forwarded_for;
+            proxy_set_header is_decoy "true";
             proxy_pass http://backend;
         }
 
@@ -100,6 +99,8 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-For $http_x_forwarded_for;
             proxy_pass http://center;
         }
     }
