--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -68,7 +68,7 @@ http {
     }
 
     upstream center {
-        server 10.11.9.101:80;
+        server 10.11.9.101:5000;
     }
 
     server {
@@ -80,22 +80,16 @@ http {
             expires 1d;
         }
 
-        location / {
-            if ($request_method != GET) {
-                return 302;
-            }
-            error_page 302 =200 @center;
-
+        location /image/ {
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-For $http_x_forwarded_for;
-            proxy_set_header is_decoy "true";
             proxy_pass http://backend;
         }
 
-        location @center {
+        location / {
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             proxy_set_header Host $host;
